--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,20 +15,20 @@ server.port=7001
 logging.config=logback.xml
 logging.level.org.springframework.web: INFO
 
-#mysql
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/femon?useUnicode=true&characterEncoding=UTF8
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-# Specify the DBMS
-spring.jpa.database = MYSQL
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# stripped before adding them to the entity manager)
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+##mysql
+#spring.datasource.url = jdbc:mysql://192.168.112.131:3306/signmaster_base?useUnicode=true&characterEncoding=UTF8
+#spring.datasource.username = test
+#spring.datasource.password = test
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+## Specify the DBMS
+#spring.jpa.database = MYSQL
+## Show or not log for each sql query
+#spring.jpa.show-sql = true
+## Hibernate ddl auto (create, create-drop, update)
+#spring.jpa.hibernate.ddl-auto = update
+## Naming strategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#
+## stripped before adding them to the entity manager)
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
