--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.velocity.templateEncoding=UTF-8
 spring.velocity.properties.input.encoding=UTF-8
 spring.velocity.properties.output.encoding=UTF-8
-spring.velocity.resourceLoaderPath=classpath:/templates/
+spring.velocity.resourceLoaderPath=classpath:templates/
 spring.velocity.suffix=.html
 
 server.port=7001
@@ -12,14 +12,14 @@ server.port=7001
 #security.user.password=admin
 
 # Spring Boot log level
-logging.config=logback.xml
-logging.level.org.springframework.web: INFO
+#logging.config=logback.xml
+#logging.level.org.springframework.web: INFO
 
 ##mysql
-#spring.datasource.url = jdbc:mysql://192.168.112.131:3306/signmaster_base?useUnicode=true&characterEncoding=UTF8
-#spring.datasource.username = test
-#spring.datasource.password = test
-#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://192.168.112.131:3306/signmaster_base?useUnicode=true&characterEncoding=UTF8
+spring.datasource.username = test
+spring.datasource.password = test
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 ## Specify the DBMS
 #spring.jpa.database = MYSQL
 ## Show or not log for each sql query
@@ -29,6 +29,6 @@ logging.level.org.springframework.web: INFO
 ## Naming strategy
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #
-## stripped before adding them to the entity manager)
+## stripped before adding them to the request manager)
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
